cmake_minimum_required(VERSION 3.6)
project(gssgc)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

#set(SOURCE_FILES src/linkedList/test.cpp)
#set(SOURCE_FILES src/linkedList/test11.c)
#set(SOURCE_FILES src/linkedList/LinkedAdd.cpp)
#set(SOURCE_FILES src/linkedList/LinkedTransfer.cpp)
#set(SOURCE_FILES src/linkedList/LinkedInsertTest.cpp)
#set(SOURCE_FILES src/linkedList/LinkedSortedRemove.cpp)
#set(SOURCE_FILES src/linkedList/LinkedSplits.cpp)
#set(SOURCE_FILES src/linkedList/LinkedSameNode.cpp)
#set(SOURCE_FILES src/queue/DAGSorted.cpp)
set(SOURCE_FILES src/queue/ShortestPath.cpp)
add_executable(gssgc ${SOURCE_FILES})