cmake_minimum_required(VERSION 3.6)
project(gssgc)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

#set(SOURCE_FILES src/linkedList/test11.c)
#set(SOURCE_FILES src/linkedList/LinkedAdd.cpp)
#set(SOURCE_FILES src/linkedList/LinkedTransfer.cpp)
#set(SOURCE_FILES src/linkedList/LinkedInsertTest.cpp)
#set(SOURCE_FILES src/linkedList/LinkedSortedRemove.cpp)
#set(SOURCE_FILES src/linkedList/LinkedSplits.cpp)
#set(SOURCE_FILES src/linkedList/LinkedSameNode.cpp)
#set(SOURCE_FILES src/queue/DAGSorted.cpp)
#set(SOURCE_FILES src/queue/ShortestPath.cpp)
#set(SOURCE_FILES src/stack/LongestParenthese.cpp)
#set(SOURCE_FILES src/stack/RPNTest.cpp)
#set(SOURCE_FILES src/stack/LargestArea.cpp)
#set(SOURCE_FILES src/string/StringReverse.cpp)
#set(SOURCE_FILES src/string/LCSDemo.cpp)
#set(SOURCE_FILES src/string/LISDemo.cpp)
#set(SOURCE_FILES src/string/PermutationDemo.cpp)
#set(SOURCE_FILES src/string/PermutationDuplicateDemo.cpp)
#set(SOURCE_FILES src/string/PermutationNoRecursion.cpp)
#set(SOURCE_FILES src/string/KMPDemo.cpp)
#set(SOURCE_FILES src/string/KMPPowerString.cpp)
#set(SOURCE_FILES src/array/LocalMaximum.cpp)
#set(SOURCE_FILES src/array/FirstMissNum.cpp)
#set(SOURCE_FILES src/array/FindMin.cpp)
#set(SOURCE_FILES src/array/MinSubarray.cpp)
#set(SOURCE_FILES src/array/MaxSubarray.cpp)
#set(SOURCE_FILES src/array/Holland.cpp)
#set(SOURCE_FILES src/array/MaxGap.cpp)
#set(SOURCE_FILES src/array/CantorArray.cpp)
#set(SOURCE_FILES src/tree/CBinaryTree.cpp src/ml/CaleShapley.cpp)
set(SOURCE_FILES src/ml/SqrtTest.cpp)
add_executable(gssgc ${SOURCE_FILES})